# weather_insights_and_forecase_advisor

./: .env  .env.agentsforimpact  .firebaserc  .gcloudignore  .gitignore  CHANGES.md  Makefile  README.md  TESTING_GUIDE.md  UX_DESIGN_PLAN.md  WEATHER_ARCHITECTURE.md  agent.py  api_wrapper.py  deploy_agents.sh  deploy_agents_lab.sh  deploy_backend.sh  deploy_firebase.sh  deploy_frontend.sh  deploy_frontend_agents.sh  deploy_frontend_lab.sh  deploy_to_cloud_run.sh  firebase.json  pyproject.toml  requirements.txt  start.sh  start_agent.sh  start_with_cors.py  test_use_cases.py
agents/: Makefile  pyproject.toml  restart.sh  test_agents.sh  test_all_agents.sh  view_logs.sh
agents/alerts_snapshot_agent/: agent.py
agents/chat/: __init__.py  agent.py
agents/chat/tools/: __init__.py
agents/emergency_resources_agent/: agent.py
agents/forecast_agent/: agent.py
agents/hurricane_simulation_agent/: .env.labs  agent.py  requirements.txt
agents/risk_analysis_agent/: agent.py
agents/risk_analysis_agent_v1/: agent.py
agents/shared_tools/: tools.py
frontend/: .env copy.production.labs  .env.example  .env.production.copy  README.md  package-lock.json  package.json  start.sh  tailwind.config.js
frontend/src/: App.js  index.css
test_data/: README.md  high_carbon_footprint.csv  low_carbon_footprint.csv  mixed_spending.csv  sample_bank_statement.csv
tools/: __init__.py  tools.py
weather-insights-ui/: .env  .env.dev  .env.production  README.md  TEST_RESULTS.md  package-lock.json  package.json  proxy-server.js
weather_insights_agent/: __init__.py  agent.py
(+38 files in other folders)
